<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/id_search"
        android:icon="@drawable/ic_search_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/id_settings"
        android:orderInCategory="200"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/id_share"
        android:orderInCategory="300"
        android:title="@string/menu_share_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/id_help_feedback"
        android:title="@string/menu_help_feedback"
        app:showAsAction="never"
        android:orderInCategory="400" />

</menu>